# consent-ledger

./: .gitignore  DESIGN.md  Makefile  NARRATIVE.md  README.md  index.html  openapi.json  pyproject.toml
app/: config.py  db.py  main.py
app/api/: artists.py  authorization.py  consent_policies.py  consumption.py  provenance.py  rights_holders.py  settlement.py  statements.py
app/domain/: enums.py  models.py  provenance.py  schemas.py
app/services/: artists.py  authorization.py  consent_policies.py  consumption.py  provenance.py  rights_holders.py  settlement.py  signing.py  statements.py
model/: __init__.py  compensation.py
scripts/: demo.py  export_openapi.py  seed.py  verify_statement.py
tests/: conftest.py  test_authorization.py  test_consent_registry.py  test_model.py  test_provenance.py  test_settlement_and_statements.py  test_tamper_evidence.py
