[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consent-ledger"
version = "0.1.0"
description = "Consent–Attribution–Settlement Ledger: tamper-evident infrastructure for licensed AI music generation."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "sqlalchemy>=2.0",
  "cryptography>=42.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
warn_unused_ignores = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
